@@ -69,6 +69,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #10311: The signal module now restores errno before returning from
+  its low-level signal handler.  Patch by Hallvard B Furuseth.
+
 - Issue #10038: json.loads() on str should always return unicode (regression
   from Python 2.6).  Patch by Walter Dörwald.
 
